--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/Ananda5.svg" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda8.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
@@ -67,7 +67,7 @@
 	<section class="home-banner-area relative banner-area">
 		<div class="container-fluid">
 			<div class="row  d-flex align-items-center justify-content-center">
-				<div class="header-left col-lg-5 col-md-6 ">
+				<div class="header-left col-lg-5 col-md-6 mt-5">
 					<h2>About Us</h2>
 					<p class="pt-10 pb-20">
 						Ananda Marga Mission in Kenya is a charitable organization ,dedicated to serving the less
