--- a/donation.html
+++ b/donation.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/Ananda5.svg" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda8.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
@@ -104,16 +104,16 @@
 				<div class="col-lg-6 col-md-10 col-sm-12">
 					<div class="donation-box">
 						<form action="">
-							<div class="donation-input">
+							<!-- <div class="donation-input">
 								<div class="form-group">
 									<input type="text" placeholder="KSH 200" onfocus="this.placeholder = ''"
 										onblur="this.placeholder = 'KES 2000'" class="form-control">
 									<span class="fs-14">KES</span>
 								</div>
-							</div>
+							</div> -->
 
 							<div class="row">
-								<div class="col-lg-6 col-md-6">
+								<!-- <div class="col-lg-6 col-md-6">
 									<div class="donation-type">
 										<div class="form-check">
 											<label class="form-check-label">
@@ -124,18 +124,32 @@
 										<p>Donate your amount for
 											this session only</p>
 									</div>
-								</div>
+								</div> -->
 
-								<div class="col-lg-6 col-md-6">
+								<div class="col-lg-12 col-md-12">
 									<div class="donation-type">
 										<div class="form-check">
-											<label class="form-check-label">
-												<input type="radio" class="form-check-input" name="optradio">
-												Ongoing
+											<label>
+												<input type="radio" name="optradio">
+												A/c Name: <span class="form-check-label">Ananda Marga
+													Mission</span>
+											</label>
+											<label>
+												<input type="radio" name="optradio">
+												Bank Name: <span class="form-check-label">Co-operative Bank.</span>
+											</label>
+											<label>
+												<input type="radio" name="optradio">
+												A/c Number: <span class="form-check-label">01129316484200</span>
+											</label>
+											<label>
+												<input type="radio" name="optradio">
+												Bank Branch: <span class="form-check-label">Kangemi Branch
+													SWIFTBIC-KCOOKENA</span>
 											</label>
 										</div>
-										<p>Donate your amount for
-											this session only</p>
+										<p>Bank Address: <span class="form-check-label">Box:29134-00625, Nairobi.</span>
+										</p>
 									</div>
 								</div>
 							</div>
