--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/Ananda5.svg" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda8.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
@@ -68,7 +68,7 @@
 	<section class="home-banner-area relative">
 		<div class="container-fluid">
 			<div class="row  d-flex align-items-center justify-content-center">
-				<div class="header-left col-lg-5 col-md-6 ">
+				<div class="header-left col-lg-5 col-md-6 mt-5">
 					<h1>
 						New way <br>
 						to give back
