--- a/mission.html
+++ b/mission.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between d-flex">
                 <div id="logo">
-                    <a href="index.html"><img src="img/Ananda5.svg" alt="" title="" /></a>
+                    <a href="index.html"><img src="img/Ananda8.svg" alt="" title="" /></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
@@ -70,7 +70,8 @@
                 <div class="header-left col-lg-5 col-md-6 ">
                     <h2>Mission School</h2>
                     <p class="pt-10 pb-20">
-                        If you are looking at blank cassettes on the web, you may be very confused at the.
+                        Free education to thousands of children all across the country. We also provide education to
+                        people living with disabilities.
                     </p>
                 </div>
                 <div class="col-lg-7 col-md-6 col-sm-8 header-right">
@@ -118,7 +119,7 @@
                         <aside class="single_sidebar_widget popular_post_widget">
                             <h3 class="widget_title">Other Programmes</h3>
                             <div class="media post_item">
-                                <img src="img/blog/popular-post/post1.jpg" alt="post">
+                                <img src="img/blog/popular-post/food.jpg" alt="post">
                                 <div class="media-body">
                                     <a href="food.html">
                                         <h3>Food Programme</h3>
@@ -126,7 +127,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/blog/popular-post/post2.jpg" alt="post">
+                                <img src="img/blog/popular-post/children.jpg" alt="post">
                                 <div class="media-body">
                                     <a href="childrens.html">
                                         <h3>Childrens Home</h3>
@@ -134,7 +135,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/blog/popular-post/post3.jpg" alt="post">
+                                <img src="img/blog/popular-post/health.jpg" alt="post">
                                 <div class="media-body">
                                     <a href="health.html">
                                         <h3>Health Programme</h3>
